--- a/index.html
+++ b/index.html
@@ -9,28 +9,42 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div>logo</div>
-            <ul>
-                <li>link</li>
-                <li>link</li>
-                <li>link</li>
-                <li>link</li>
+    <div class="container">
+        <header>
+            <nav class="navbar">
+                <div>logo</div>
+                <ul class="box-link">
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
                 <div>login</div>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-    </main>
-    <footer>
-        <section></section>
-    </footer>
+
+            </nav>
+        </header>
+        <main>
+            <section class="section-1">
+                <div class="container-section-1"></div>
+            </section>
+            <section class="section-2">
+                <div class="box box1"></div>
+                <div class="box box2"></div>
+            </section>
+            <section class="section-2">
+                <div></div>
+            </section>
+            <section>
+                <div></div>
+            </section>
+            <section class="gray-box">
+                <div class="green-box"></div>
+            </section>
+        </main>
+        <footer>
+            <section></section>
+        </footer>
+    </div>
 </body>
 
 </html>
