--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>struttura discord</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <header>
             <nav class="navbar">
                 <div>logo</div>
@@ -23,27 +23,48 @@
 
             </nav>
         </header>
-        <main>
-            <section class="section-1">
-                <div class="container-section-1"></div>
+        <main class="main-container">
+
+            <section class="hero-section">
+                <div class="hero-content"></div>
             </section>
-            <section class="section-2">
-                <div class="box box1"></div>
-                <div class="box box2"></div>
+
+            <section class="features-section">
+                <div class="features-content">
+                    <div class="feature-item-1"></div>
+                    <div class="feature-item-2"></div>
+                </div>
             </section>
-            <section class="section-2">
-                <div></div>
+            <section class="features-section2">
+                <div class="features-content">
+                    <div class="feature-item-3"></div>
+                    <div class="feature-item-4"></div>
+                </div>
             </section>
-            <section>
-                <div></div>
+            <section class="features-section">
+                <div class="features-content">
+                    <div class="feature-item-1"></div>
+                    <div class="feature-item-2"></div>
+                </div>
             </section>
-            <section class="gray-box">
-                <div class="green-box"></div>
+            <section class="box-gray">
+                <div class="box-gray-inside"></div>
             </section>
         </main>
         <footer>
-            <section></section>
+            <section class="pie-di-pagina">
+                <div class="foot-container">
+                    <div class="left-box col-4"></div>
+                    <div class="right-box col-8"></div>
+                </div>
+                <div></div>
+
+            </section>
         </footer>
+
+
+
+
     </div>
 </body>
 
