--- a/index.html
+++ b/index.html
@@ -55,16 +55,21 @@
             <section class="pie-di-pagina">
                 <div class="foot-container">
                     <div class="left-box col-4"></div>
-                    <div class="right-box col-8"></div>
+                    <div class="right-box col-8">
+                        <div class="col-3"></div>
+                        <div class="col-3"></div>
+                        <div class="col-3"></div>
+                        <div class="col-3"></div>
+                    </div>
                 </div>
-                <div></div>
-
+                <div class="footer-bottoni">
+                    <div class="bottoni-finali">
+                        <div class="logo">Logo</div>
+                        <div class="bottone"> Bottone</div>
+                    </div>
+                </div>
             </section>
         </footer>
-
-
-
-
     </div>
 </body>
 
